--- a/index.html
+++ b/index.html
@@ -2,28 +2,17 @@
 <html lang="en">
 
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3471GCTDCW"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
-
-      gtag('config', 'G-NKE9RNR7G1');
-    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>The Doge Crops Farmer</title>
     <meta name="description" content="The latest project made by the Crops Farmer Team" />
-
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://Doge.cropsfarmer.online/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="The Doge Crops Farmer" />
     <meta property="og:description" content="The latest project made by the Crops Farmer Team" />
     <meta property="og:image" content="https://Doge.cropsfarmer.online/assets/img/dogechain.png" />
-
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="https://twitter.com/BUSDCropFarmer" />
@@ -31,20 +20,14 @@
     <meta name="twitter:title" content="The Doge Crops Farmer" />
     <meta name="twitter:description" content="The latest project made by the Crops Farmer Team" />
     <meta name="twitter:image" content="https://Doge.cropsfarmer.online/assets/img/Dogechain.png" />
-
     <!-- Favicons -->
     <link href="assets/img/dogechain.png" rel="icon" type="image/png">
     <link href="assets/img/dogechain.png" rel="apple-touch-icon">
-
     <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-      rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P">
-
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -53,16 +36,11 @@
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/styleNew.css" rel="stylesheet">
-
-
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/3.0.0-rc.5/web3.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
   </head>
   <style>
     .icon-connect,
@@ -147,14 +125,6 @@
       </div>
     </header><!-- End Header -->
 
-    <!-- <div id="banner">
-      <div id="wrapper">
-        <div id="container">
-          <a href="https://bit.ly/3y4Ylzh" target="_blank"><img class="banner-img" src="assets/img/yieldfarmer1.PNG"
-              alt="N.A.L.A. Apparel"></a>
-        </div>
-      </div>
-    </div> -->
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center justify-content-center">
       <div class=container>
@@ -166,26 +136,10 @@
         </div>
         <div class="content-box" data-aos="zoom-in">
           <div>
-            <!--
-          <div class="dial-container">
-            <div class="dial-wrap">
-              <input id="dial-hours" data-min="0" data-max="24">
-              <span class="dial-text" style="text-align:center "><span id="hours"></span> <br> <span style="font-size: 9px;" >Hours</span> </span>
-            </div>
-            <div class="dial-wrap">
-              <input id="dial-mins" data-min="0" data-max="60">
-              <span class="dial-text"><span id="mins"></span> <br> <span style="font-size: 9px;"> Minutes </span> </span>
-            </div>
-            <div class="dial-wrap">
-              <input id="dial-seconds" data-min="0" data-max="60">
-              <span class="dial-text"><span id="seconds"></span> <br> <span style="font-size: 9px;">  Seconds </span></span>
-            </div>
-        </div>
--->
             <div class="row info-container" style="padding: 0px;" data-aos="zoom-in">
               <div class=" info-container-2 d-flex flex-wrap justify-content-center ">
                 <div class="col-md-2 d-flex align-items-center justify-content-sm-center">
-                  <img class="d-flex justify-content-md-start " id="logo-space" src="./assets/img/dogechain.PNG" alt=""
+                  <img class="d-flex justify-content-md-start " id="logo-space" src="./assets/img/dogechain.png" alt=""
                     width="175" height="175">
                 </div>
                 <div class="col-md-8 col-sm-12 d-flex align-items-center justify-content-center">
@@ -207,18 +161,6 @@
                   <h3 class="text-start busd"
                     style="color:#A67DB8; letter-spacing: 2px; margin-left: 5px;font-size: 2rem; ">Statistics</h3>
                   <hr>
-                  <!--  <div class="col-md-2 stat mb-md-2 ">
-                    <div class="header">
-                      <i class="bi-bank" style="color: var(--token); font-size: 16px; margin-left: 10px;"></i>
-                      Total Staked<i class="bi bi-question-circle "
-                        style="font-size: 12px; color: rgb(198, 255, 252); margin-left: 5px;"></i>
-                      <div>
-                        <strong class="number busd"
-                          style="-webkit-text-stroke: 1px #A67DB8; color:#A67DB8; letter-spacing: 2px; margin-left: 20px;font-size: 2rem;"
-                          id="total-staked">-</strong>
-                      </div>
-                    </div>
-                  </div> -->
                   <div class="col-md-2 stat  mb-md-2">
                     <div class="header">
                       <i class="bi-bank" style="color: var(--token); font-size: 16px; margin-left: 10px;"></i>
@@ -247,7 +189,7 @@
                     <div class="header">
                       <i class="bi-bank" style="color: var(--token); font-size: 16px; margin-left: 10px;"></i>
                       Total Farmers
-                      <!--<span class="busd"> FTM </span>--> <i class="bi bi-question-circle "
+                      <i class="bi bi-question-circle "
                         style="font-size: 12px; color: rgb(198, 255, 252); margin-left: 5px;"></i>
                       <div>
                         <strong class="number  mb-md-2 busd"
@@ -257,8 +199,6 @@
                     </div>
                   </div>
                   <div class="col-md-12 d-flex justify-content-start">
-                    <!--   <a href="#mine" class="start-btn" style="margin: 4px;"><i class="bi bi-box-arrow-in-right"></i> GET STARTED</a> -->
-
                     <a href="https://home.cropsfarmer.online/" class="start-btn2" target="_blank"><i
                         class="bi bi-cash-coin"></i>
                       Crops Farm Hub</a>
@@ -429,9 +369,9 @@
                             100 <span class="busd">Doge</span>
                             = <span id="example-miners">0 </span> Farmers
                           </div>
-                          <!-- <div>
-                          <i class="bi-minecart"></i>
-                        </div> -->
+                          <div>
+                            <i class="bi-minecart"></i>
+                          </div>
                           <div>
                             <i class="ri-coins-line ri-1x"></i>
                             Daily Yield:
@@ -465,7 +405,7 @@
                   <br>
                   <div class="btn-container">
                     <strong style="padding-left: 5px; padding-bottom: 5px" ;>
-                      <span style="font-size: 16px;">1.</span><!-- <i class="bi-bank"></i> -->
+                      <span style="font-size: 16px;">1.</span> <i class="bi-bank"></i>
                       Deposit <span class="busd">Doge</span>
                       <span class="usd">
                         ( min <span class="busd" id="min-deposit">0 </span>,
@@ -504,9 +444,6 @@
                       </div>
                       <br>
                     </div>
-                    <!-- <span class="usd" style="font-size: 14px;">
-                    ≈ $<span id="mined-usd" >0 </span> USD
-                  </span> -->
                     <div class="timer" style="color:white;">
                       Estimated daily yield:
                     </div>
@@ -727,8 +664,8 @@
       </div>
     </footer><!-- End Footer -->
     <div id="preloader"></div>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-        class="bi bi-arrow-up-short"></i></a>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
+      <i class="bi bi-arrow-up-short"></i></a>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/aos/aos.js"></script>
@@ -739,7 +676,6 @@
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/js/moment.js"></script>
     <script src="assets/js/timer.js"></script>
-
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
     <script type="text/javascript" src="assets/js/main_eth.js"></script>
