--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="row info-container" style="padding: 0px;" data-aos="zoom-in">
               <div class=" info-container-2 d-flex flex-wrap justify-content-center ">
                 <div class="col-md-2 d-flex align-items-center justify-content-sm-center">
-                  <img class="d-flex justify-content-md-start " id="logo-space" src="/assets/img/dogechain.png" alt=""
+                  <img class="d-flex justify-content-md-start " id="logo-space" src="./assets/img/dogechain.png" alt=""
                     width="175" height="175">
                 </div>
                 <div class="col-md-8 col-sm-12 d-flex align-items-center justify-content-center">
