--- a/index.html
+++ b/index.html
@@ -343,6 +343,20 @@
               </div> -->
               </div>
             </div>
+            <div class="timer2">
+              <div class="timer-blockchain">
+                <div class="text-block-18">DOGE POOL</div>
+                <div class="text-block-19" id="timer3">00:00</div>
+                <div class="div-block-16">
+                  <div class="text-block-20" id="contractbalancePOOL">000.0000 DOGE</div>
+                </div>
+                <div class="div-block-20">
+                  <div class="text-block-25">Last Wallet Address :</div>
+                  <div class="example" id="lastuserpool"></div>
+                </div>
+                <div class="wallet-text">If there are no purchases of miners in the amount of $50 or more within an hour after you, then the entire amount of Time Pool will automatically be credited to your wallet. This is guaranteed by a<a href="https://bscscan.com/address/0x0cff03d61af4ef29a374b8aeef8bbedd6abc63b5" target="_blank" class="link-text"> smart contract</a></div>
+              </div>
+            </div>
             <div class="row">
               <div>
                 <span>
@@ -405,7 +419,7 @@
                   <br>
                   <div class="btn-container">
                     <strong style="padding-left: 5px; padding-bottom: 5px" ;>
-                      <span style="font-size: 16px;">1.</span> <i class="bi-bank"></i>
+                      <span style="font-size: 16px;"></span> <i class="bi-bank"></i>
                       Deposit <span class="busd">Doge</span>
                       <span class="usd">
                         ( min <span class="busd" id="min-deposit">0 </span>,
