--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                     <div class="d-flex flex-column ">
                       <h1 class="text-center text-black">Welcome to</h1>
                       <span class="busd text-center "
-                        style="-webkit-text-stroke: 1px #A67DB8; color:black; letter-spacing: 2px; margin-left: 5px;font-size: 1.95rem;">The
+                        style="-webkit-text-stroke: 1px #F8F991; color:black; letter-spacing: 2px; margin-left: 5px;font-size: 1.95rem;">The
                         Doge Crops Farmer.</span>
                       <h2 class="text-center" style="max-width: 328px;">A smart and sustainable way to grow your <span
-                          class="busd" style="color: #A67DB8; font-weight: 300;">Doge</span> on the DogeChain.</h2>
+                          class="busd" style="color: #F8F991; font-weight: 300;">Doge</span> on the DogeChain.</h2>
                     </div>
                   </div>
                 </div>
@@ -159,7 +159,7 @@
               <div class="row stats-row-container " data-aos="zoom-in">
                 <div class="col-md-6">
                   <h3 class="text-start busd"
-                    style="color:#A67DB8; letter-spacing: 2px; margin-left: 5px;font-size: 2rem; ">Statistics</h3>
+                    style="color:#F8F991; letter-spacing: 2px; margin-left: 5px;font-size: 2rem; ">Statistics</h3>
                   <hr>
                   <div class="col-md-2 stat  mb-md-2">
                     <div class="header">
@@ -168,7 +168,7 @@
                         style="font-size: 12px; color: rgb(198, 255, 252); margin-left: 5px;"></i>
                       <div>
                         <strong class="number  mb-md-2 busd"
-                          style="-webkit-text-stroke: 1px #A67DB8; color:#A67DB8; letter-spacing: 2px; margin-left: 20px;font-size: 2rem;"
+                          style="-webkit-text-stroke: 1px #F8F991; color:#F8F991; letter-spacing: 2px; margin-left: 20px;font-size: 2rem;"
                           id="total-ref">-</strong>
                       </div>
                     </div>
@@ -180,7 +180,7 @@
                         style="font-size: 12px; color: rgb(198, 255, 252); margin-left: 5px;"></i>
                       <div>
                         <strong class="number  mb-md-2 busd"
-                          style="-webkit-text-stroke: 1px #A67DB8; color:#A67DB8; letter-spacing: 2px; margin-left: 20px;font-size: 2rem;"
+                          style="-webkit-text-stroke: 1px #F8F991; color:#F8F991; letter-spacing: 2px; margin-left: 20px;font-size: 2rem;"
                           id="contract-balance">-</strong>
                       </div>
                     </div>
@@ -193,7 +193,7 @@
                         style="font-size: 12px; color: rgb(198, 255, 252); margin-left: 5px;"></i>
                       <div>
                         <strong class="number  mb-md-2 busd"
-                          style="-webkit-text-stroke: 1px #A67DB8; color:#A67DB8; letter-spacing: 2px; margin-left: 20px;font-size: 2rem;"
+                          style="-webkit-text-stroke: 1px #F8F991; color:#F8F991; letter-spacing: 2px; margin-left: 20px;font-size: 2rem;"
                           id="total-players">-</strong>
                       </div>
                     </div>
@@ -207,7 +207,7 @@
                 </div>
                 <div class="col-md-4 ms-md-5 my-1">
                   <h3 class="text-start busd"
-                    style=" color:#A67DB8;  letter-spacing: 2px; margin-left: 5px;font-size: 2rem;">Benefits</h3>
+                    style=" color:#F8F991;  letter-spacing: 2px; margin-left: 5px;font-size: 2rem;">Benefits</h3>
                   <hr>
                   <div class="stats mt-md-3">
                     <h4 class="mb-4 mb-sm-0">
@@ -250,14 +250,14 @@
                   </div>
                   <br>
                   <div class="" style=" text-align: left!important;">
-                    <i class="ri-alert-line" style="color: #A67DB8; font-size: 10px;"></i>
+                    <i class="ri-alert-line" style="color: #F8F991; font-size: 10px;"></i>
                     <span style="font-weight: 100; font-size: 14px;">
-                      <!-- <strong style="color: #A67DB8;">Important Note!</strong> 
+                      <!-- <strong style="color: #F8F991;">Important Note!</strong> 
 			Part of the fees of this project will be used to buy  
 			<p>
 			In Addition, to further encourage the community to re-hire/compound, there will be an additional 2.5% bonus for each compound action that the user will do, which can stack up to 25% for 10 consecutive times / 5 days. By doing so, this will ensure the long term potential profit of every investor. 
 		    <p><p> -->
-                      <strong style="color: #A67DB8;">Important Note!</strong> We believe that helping people on this
+                      <strong style="color: #F8F991;">Important Note!</strong> We believe that helping people on this
                       planet that live below the breadline is important and we all need to play our part. Crypto Phil
                       has started a campaign to donate 1 day per month income to those in need. We salute Phil for this
                       and will be donating 0.1% of the TVL to this cause. Follow Crypto Phil on YouTube to see these
@@ -360,8 +360,8 @@
             <div class="row">
               <div>
                 <span>
-                  <i style="color: #A67DB8;" class="ri-alert-line"></i>
-                  <strong style="color: #A67DB8;">Disclaimer:</strong> Funds that are used to initially hire farmers
+                  <i style="color: #F8F991;" class="ri-alert-line"></i>
+                  <strong style="color: #F8F991;">Disclaimer:</strong> Funds that are used to initially hire farmers
                   (including re-hire) cannot be withdrawn, however your farmers will indefinitely work and grow crops
                   for you. Please use the application at your own risk.
                 </span>
@@ -552,7 +552,7 @@
           <div class="faq-list">
             <ul>
               <li>
-                <h4 style="color: #A67DB8; justify-content: center">Frequently Asked Questions</h4>
+                <h4 style="color: #F8F991; justify-content: center">Frequently Asked Questions</h4>
                 <i class="bx bx-help-circle icon-help"></i>
                 <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">What is the Doge Crops
                   Farmers?
@@ -672,7 +672,7 @@
     <footer id="footer">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span style="color: #A67DB8;">The Crops Farmer Team.</span></strong> All Rights
+          &copy; Copyright <strong><span style="color: #F8F991;">The Crops Farmer Team.</span></strong> All Rights
           Reserved
         </div>
       </div>
